Fix bug with no headphones error message not showing on headphones list page

--- a/css/headphones.css
+++ b/css/headphones.css
@@ -582,6 +582,7 @@ nav .left {
     color: white;
     padding: 0.5em 1em 0.5em 1em;
     border: 0;
+    margin-right: 1em;
 }
 
 #add-review-modal {
